--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -1,12 +1,15 @@
-appenders=xyz
 
-appender.xyz.type = Console
-appender.xyz.name = myOutput
-appender.xyz.layout.type = PatternLayout
-appender.xyz.layout.pattern = [%d{yy-MMM-dd HH:mm:ss:SSS}] [%p] [%c{1}:%L] - %m%n
+status = warn
 
+name = SnowplowStreams
+
+# Console appender configuration
+appender.console.type = Console
+appender.console.name = consoleLogger
+appender.console.layout.type = PatternLayout
+appender.console.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+
+# Root logger level
 rootLogger.level = info
-
-rootLogger.appenderRefs = abc
-
-rootLogger.appenderRef.abc.ref = myOutput
+# Root logger referring to console appender
+rootLogger.appenderRef.stdout.ref = consoleLogger
